// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable / FlexTable with different columns Column Width Sortable Table 1`] = `
.c25 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  box-sizing: border-box;
}

.c19 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 15%;
  -ms-flex: 0 15%;
  flex: 0 15%;
}

.c20 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 100px;
  -ms-flex: 0 100px;
  flex: 0 100px;
}

.c24 {
  box-sizing: border-box;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E69;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c15 {
  width: inherit;
}

.c22 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c21 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c21:hover {
  background: #F5F5F5;
}

.c21 > *:first-child {
  padding-left: 0;
}

.c21 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c18 {
  margin-left: 4px;
}

.c9 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c11 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.c8 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Sortable Table With Column Width Set
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        aria-sort="none"
        className="c7 c8"
        role="columnheader"
      >
        <a
          className="c9"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c10 c11"
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                <span
                  className="c16"
                >
                  Flex 1
                </span>
              </div>
            </div>
            <div
              className="c12"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c19 c8"
        role="columnheader"
      >
        <a
          className="c9"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c10 c11"
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                <span
                  className="c16"
                >
                  Fifteen percent
                </span>
              </div>
            </div>
            <div
              className="c12"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c20 c8"
        role="columnheader"
      >
        <a
          className="c9"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c10 c11"
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                <span
                  className="c16"
                >
                  Loooooooooooooong header set width
                </span>
              </div>
            </div>
            <div
              className="c12"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c7 c8"
        role="columnheader"
      >
        <a
          className="c9"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c10 c11"
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                <span
                  className="c16"
                >
                  Default
                </span>
              </div>
            </div>
            <div
              className="c12"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c4 c21"
      role="row"
    >
      <div
        className="c7 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c19 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Very long cell content that should be truncated or ellipsized depepending on your language preferences
          </span>
        </div>
      </div>
      <div
        className="c20 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c7 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 1-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c21"
      role="row"
    >
      <div
        className="c7 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c19 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c20 c22"
        role="cell"
      >
        <div
          className="c24 c13"
        >
          <div
            className="c14 c15"
          >
            <span
              className="c23"
            >
              Long cell with flag
            </span>
          </div>
          <svg
            className="c25"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
      </div>
      <div
        className="c7 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 2-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c21"
      role="row"
    >
      <div
        className="c7 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c19 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c20 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c7 c22"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c23"
          >
            Cell 3-4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different columns Column Width Table With Custom Flag Cell 1`] = `
.c19 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 15%;
  -ms-flex: 0 15%;
  flex: 0 15%;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 100px;
  -ms-flex: 0 100px;
  flex: 0 100px;
}

.c17 {
  box-sizing: border-box;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c10 {
  width: inherit;
}

.c15 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Different Widths and Custom Flag Cell
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Flex 1
          </span>
        </div>
      </div>
      <div
        className="c12 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Fifteen percent
          </span>
        </div>
      </div>
      <div
        className="c13 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Loooooooooooooong header set width
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Default
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c14"
      role="row"
    >
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Very long cell content that should be truncated or ellipsized depepending on your language preferences
          </span>
        </div>
      </div>
      <div
        className="c13 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 1-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c14"
      role="row"
    >
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c13 c15"
        role="cell"
      >
        <div
          className="c17 c18"
        >
          <div
            className="c9 c10"
          >
            <span
              className="c16"
            >
              Long cell with flag
            </span>
          </div>
          <svg
            className="c19"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
      </div>
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 2-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c14"
      role="row"
    >
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c13 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different columns Different Alignments Table 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c10 {
  width: inherit;
}

.c15 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Different Alignments
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Left
          </span>
        </div>
      </div>
      <div
        className="c12 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Right
          </span>
        </div>
      </div>
      <div
        className="c12 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Right
          </span>
        </div>
      </div>
      <div
        className="c13 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Center
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c14"
      role="row"
    >
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c13 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 1-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c14"
      role="row"
    >
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c13 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 2-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c14"
      role="row"
    >
      <div
        className="c7 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c13 c15"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c16"
          >
            Cell 3-4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different columns Media Columns 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: none;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: none;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c10 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:976px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Columns Hidden Based On Screen Size
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c12 c8"
        hidden={true}
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Hidden column on mobile
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        hidden={true}
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Hidden on mobile
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        hidden={true}
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Hidden on mobile
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        hidden={true}
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Hidden on mobile
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
